tests/error/comprehension_errors/capture1.err
Error: Copy violation (at $FILE:8:12)
  | 
6 | @guppy
7 | def foo(xs: list[int], q: qubit @owned) -> list[qubit]:
8 |     return [q for x in xs]
  |             ^ Variable `q` with non-copyable type `qubit` would be moved
  |               multiple times when evaluating this comprehension

Guppy compilation failed due to 1 previous error
